# ICTbuild-upProject

./: .gitignore  README.md  REFIND_DEVELOPMENT_SPEC.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/ai/: faiss_index.py  normalizer.py  scorer.py  text_encoder.py
backend/app/api/: dependencies.py
backend/app/api/v1/: auth.py  found_items.py  lost_items.py  notifications.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_initial.py  0002_add_lost_item_custom_category.py  0003_add_lost_item_custom_color.py  0004_add_text_embeddings.py  0005_add_lost_item_closure.py
backend/app/models/: __init__.py  tables.py
backend/app/providers/: lost112.py
backend/app/schemas/: schemas.py
backend/app/services/: auth_service.py  found_item_service.py  lost112_sync_service.py  lost_item_service.py  matching_service.py  notification_service.py  text_index_service.py
backend/data/faiss/: found_items_text.faiss  found_items_text_ids.json
backend/scripts/: rebuild_text_index.py  seed_found_items.py  sync_lost112_recent.py
backend/tests/: test_faiss_index.py  test_lost112_provider.py  test_normalizer.py
frontend/: .env.local.example  Dockerfile  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/constants/: index.ts
frontend/src/lib/: api.ts  auth.ts  validators.ts
frontend/src/types/: index.ts
(+8 files in other folders)
