[project]
name = "refind-backend"
version = "0.1.0"
description = "ReFind - AI 분실물 매칭·알림 서비스 백엔드"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    # passlib 1.7.4's bcrypt backend self-test breaks on bcrypt>=4.1 (stricter 72-byte
    # check inside passlib's own internal detection routine, not user input).
    "bcrypt>=4.0.1,<4.1",
    "python-multipart>=0.0.12",
    "httpx>=0.27",
    "boto3>=1.35",
    "APScheduler>=3.10",
]

[project.optional-dependencies]
ai = [
    "sentence-transformers>=3.1",
    "faiss-cpu>=1.9",
    "torch>=2.4",
    "transformers>=4.45",
    "Pillow>=10.4",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["app/db/migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI's Depends()-as-default is the documented DI pattern, not a bug.
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
